service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  selector:
    app: go-app
  type: NodePort
  ports:
  - port: 80
